--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,4 @@
-
-{
+ {
   "version": 2,
   "builds": [
     {
@@ -9,7 +8,10 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "handle": "filesystem"
+    },
+    {
+      "src": "/.*",
       "dest": "/index.html"
     }
   ]
